MDEV-25379 JSON_TABLE: ERROR ON clauses are ignored if a column is not on select list.

If a field is not in the read set - read it in the local buffer anyway to check for errors.